--- a/css/styles.css
+++ b/css/styles.css
@@ -1,221 +1,230 @@
 body {
-    font-family: "montserrat";
+  font-family: "montserrat";
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: "montserrat";
+  font-weight: bolder;
 }
 
 h2 {
-    font-family: "montserrat";
-    font-weight: 669;
-    font-size: 2.7rem;
-    line-height: 1.5;
+  font-weight: 669;
+  font-size: 2.7rem;
+  line-height: 1.5;
 }
 
 h3 {
-    font-family: "montserrat";
-    font-weight: 750;
-    font-size: 1.5rem;
+  font-weight: 750;
+  font-size: 1.5rem;
 }
 
 /* Headings */
-.main-heading{
-    line-height: 1.5;
-    font-size: 3.5rem;
-    font-weight: 700;
-}
 
+.main-heading {
+  line-height: 1.5;
+  font-size: 3.5rem;
+  font-weight: 700;
+}
 
 /* TITLE */
 
 #title {
-    background: #ff4c68;
-    color: #912a2e;
-    /* color: #7a1b38; */
-    /* color: #c82f63; */
+  background: #ff4c68;
+  color: #912a2e;
+  /* color: #7a1b38; */
+  /* color: #c82f63; */
 }
 
 .container-fluid {
-    padding: 3% 15% 10% 15%;
+  padding: 3% 15% 10% 15%;
 }
-
 
 /* NAVIGATION BAR */
 
 .navbar {
-    padding: 0 0 4.5rem;
+  padding: 0 0 4.5rem;
 }
 
 .navbar-brand {
-    font-family: "ubuntu";
-    font-size: 2.5rem;
+  font-family: "ubuntu";
+  font-size: 2.5rem;
 }
 
 .nav-item {
-    padding: 0 7px;
+  padding: 0 7px;
 }
-
 
 /* DOWNLOAD BUTTONS */
 
 .down-btn {
-    margin: 3% 2% 3% 0;
+  font-size: 15px;
+  background: transparent;
+  border: solid 1px black;
+  cursor: pointer;
+  color: #FFE4E4;
+  border-radius: 5%;
+  transition: all 0.6s;
+  box-shadow: 10px 10px 35px #f44a67, -10px -10px 35px #f44a67;
+  margin: 3% 2% 3% 0;
 }
 
+.down-btn:hover {
+  color: black;
+  background: linear-gradient(to right, #fb575c, #ef3e47);
+}
 
 /* TITLE IMAGE */
 
 #title-img {
-    max-width: 56%;
-    transform: rotate(25deg);
-    position: absolute;
-    /* z-index: -1; */
-    right:30%;
+  max-width: 56%;
+  transform: rotate(25deg);
+  position: absolute;
+  /* z-index: -1; */
+  right: 30%;
 }
-
 
 /* FEATURES SECTION */
 
 #features {
-    padding: 7% 10%;
-    text-align: center;
-    background-color: #fff;
-    position: relative;
-    /* z-index: 1; */
+  padding: 7% 10%;
+  text-align: center;
+  background-color: #fff;
+  position: relative;
+  /* z-index: 1; */
 }
 
 #fi {
-    color: #ef8172;
-    padding-bottom: 1rem;
+  color: #ef8172;
+  padding-bottom: 1rem;
 }
 
 #fi:hover {
-    color: #ff4c68;
+  color: #ff4c68;
 }
 
 #fp {
-    color: #8f8f8f;
+  color: #8f8f8f;
 }
-
 
 /* TESTIMONIALS */
 
 #testimonials {
-    text-align: center;
-    color: #912a2e;
-    background-color: #ef8172;
+  text-align: center;
+  color: #912a2e;
+  background-color: #ef8172;
 }
 
 .testic-img {
-    width: 7%;
-    border-radius: 100%;
-    margin: 2%;
+  width: 7%;
+  border-radius: 100%;
+  margin: 2%;
 }
 
 /* PRESS IMAGES ADVERT */
 
 #press {
-    padding-top: 2%;
-    padding-bottom: 0.5%;
-    background: #ef8172;
-    text-align: center;
+  padding-top: 2%;
+  padding-bottom: 0.5%;
+  background: #ef8172;
+  text-align: center;
 }
 
 #press-logo {
-    width: 10%;
-    margin: 0px 20px 50px;
+  width: 10%;
+  margin: 0px 20px 50px;
 }
 
 .carousel-item {
-    padding: 7% 10%;
-}
-/* pricing section */
-#pricing{
-padding: 100px;
-text-align: center;
+  padding: 7% 10%;
 }
 
-.pricing-col{
-    padding: 3% 2%;
+/* pricing section */
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-col {
+  padding: 3% 2%;
 }
 
 /* CTA */
 
-#cta{
-    background: #ff4c68;
-    padding: 5% 10%;
-    text-align: center;
+#cta {
+  background: #ff4c68;
+  padding: 5% 10%;
+  text-align: center;
 }
 
-#cta h3{
-    font-family: "montserrat";
-    font-size: 3.5rem;
-    line-height: 1.5;
-    color: #fff;
+#cta h3 {
+  font-size: 3.5rem;
+  line-height: 1.5;
+  color: #fff;
 }
 
 /* Footer */
 
-#footer{
-    padding: 2% 10%;
-    text-align: center;
-    background:white;
-    z-index: -1;
+#footer {
+  padding: 2% 10%;
+  text-align: center;
+  background: white;
+  z-index: -1;
 }
 
 /* Icons */
 
 .icons {
-    width: 38px;
-    height: 38px;
-    margin: 10px auto;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    border-radius: 50%;
-    overflow: hidden;
-    z-index: 1;
+  width: 38px;
+  height: 38px;
+  margin: 10px auto;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  border-radius: 50%;
+  overflow: hidden;
+  z-index: 1;
 }
 
 .icons::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    border-radius: 50%;
-    transform: translate(100%, 100%);
-    transition: all .4s;
-    background: linear-gradient(to right, #ffae00, #fa7e91);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  border-radius: 50%;
+  transform: translate(100%, 100%);
+  transition: all 0.4s;
+  background: linear-gradient(to right, #ffae00, #fa7e91);
 }
 
 .icons:hover::before {
-    transform: translate(0);
-    animation: anim 0.4s ease-in-out;
+  transform: translate(0);
+  animation: anim 0.4s ease-in-out;
 }
 
 @keyframes anim {
-    0%,
-    100% {
-        width: 100%;
-        height: 100%;
-    }
-    50% {
-        width: 50%;
-        height: 50%;
-    }
+  0%, 100% {
+    width: 100%;
+    height: 100%;
+  }
+  50% {
+    width: 50%;
+    height: 50%;
+  }
 }
-
 
 /* Media Queries */
 
 @media (max-width: 1000px) {
-    #title{
-        text-align: center;
-    }
-    
-    #title-img{
-        position: static;
-        transform: rotate(0);
-    }
+  #title {
+    text-align: center;
+  }
+  #title-img {
+    position: static;
+    transform: rotate(0);
+  }
 }
