--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,13 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "montserrat";
   text-align: center;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: "montserrat";
   font-weight: bolder;
 }
